syntax = "proto3";
package stream;

option go_package = "github.com/ntsd/cross-clipboard/pkg/stream";

message DeviceData {
  enum OS {
    LINUX = 0;
    DARWIN = 1;
    WINDOWS = 2;
    ANDROID = 3;
    IOS = 4;
    OTHER = 5;
  }
  
  OS os = 1;
  string name = 2;
  bytes public_key = 3;
}

message ClipboardData {
  bool is_image = 1;
  uint32 data_size = 2;
  int64 time = 3;
  bytes data = 4;
}
